# Hadoop-v-Spark-Performance

./: README.md
different-config-hadoop/: Analysis.py  CMakeLists.txt  README.md  benchmark.sh  hashgen.c
different-config-hadoop/c/: .full.c.swp  .latest.c.swp  .testsort.cpp.swp  .time.txt.swp  blake3.h
hadoop v spark/: HadoopSort.java  README.md  SparkSort.py  core-site.xml  hdfs-site.xml  hdfs_hashverify.py  mapred-site.xml  pom.xml  readme.txt  spark-env.sh  yarn-site.xml
hadoop v spark/Scripts/: setup.sh
hadoop v spark/src/main/java/com/example/hadoop/: Blake3.java
